--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
     </header>
     <div id="cover-image">
-        <img src="youtube image.avif" alt="Cover Image">
+        <img src="ESPN-HOZ.jpg" alt="Cover Image">
         <div id="button-container">
             <h1>Activate Your Epson Printer with Ease |espon.com/activate</h1>
         </div>
