--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
     <div id="cover-image">
         <img src="ESPN-HOZ.jpg" alt="Cover Image">
         <div id="button-container">
-            <h1>Activate Your Epson Printer with Ease |espon.com/activate</h1>
+            <h1>Activate Your Espn account |espn.com/activate</h1>
         </div>
     </div>
     <div class="container">
-        <h1>Activate Epson Printer on Your Device</h1>
+        <h1>Activate Espn on Your Device</h1>
         <p>  The term activation as used when you want to run an app for instance the ESPN app on your television means the process of tying the app on your device (the Vizio television set in this case) to an account with the service providers (ESPN in this case). Quite often, it includes going to a particular web address that could be espn. com/activate and typing a code that appears on your TV.
         </p>
         <h2>Activating the ESPN App on Vizio TV</h2>
