--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Activate ESPN on your device easily with step-by-step instructions. Visit ESPN.com/activate to begin streaming your favorite sports and shows today.">
+
+    <meta name="keywords" content="espn.com/activate, espn.com/activate tv code, espn.com/activate code, espn.com/activate hulu, espn.com/activate disney plus">
     
-    <title>Activate YouTube on Your Device</title>
+    
+    <title>Activate Your Espn account |espn.com/activate</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         body {
