--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             position: relative;
             z-index: 0;
         }
-        #button-container {
+    #button-container {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -175,6 +175,7 @@
         <img src="ESPN-HOZ.jpg" alt="Cover Image">
         <div id="button-container">
             <h1>Activate Your Espn account |espn.com/activate</h1>
+             <button id="button">Get Started</button>
         </div>
     </div>
     <div class="container">
@@ -272,4 +273,3 @@
     </div>
 </body>
 </html>
-
