--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta name="description" content="Activate ESPN on your device easily with step-by-step instructions. Visit ESPN.com/activate to begin streaming your favorite sports and shows today.">
 
     <meta name="keywords" content="espn.com/activate, espn.com/activate tv code, espn.com/activate code, espn.com/activate hulu, espn.com/activate disney plus">
-    
+
     
     <title>Activate Your Espn account |espn.com/activate</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P1G8FTQV66"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P1G8FTQV66');
+</script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         body {
