--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </label>
             <div style="display: flex; padding-top: 10px;">
                 <img src="green_check_mark-removebg-preview.png" alt="Logo" height="50px" width="50px">
-                <h1 style="color: white; margin-top: 5px; margin-left: 10px;">Xfinity.com/authorize</h1>
+                <h1 style="color: white; margin-top: 5px; margin-left: 10px;">Espn.com/activate</h1>
             </div>
             <ul>
                 <li><a class="active" href="#">Home</a></li>
